style: added required changes as per PR refac: changed files name

--- a/components.html
+++ b/components.html
@@ -13,12 +13,14 @@
     <div class="components-main">
         <div class="nav components-nav">
             <nav>
+                <a href="./index.html" class="logo-nav">
                 <div class="logo">
                     <div class="leaf leaf3"></div>
                     <div class="leaf leaf2"></div>
                     <div class="leaf leaf1"></div>
                     <span class="name">Lemoncss</span>
                 </div>
+                </a>
                 <div class="search">
                     <i class="fa fa-search fa-lg" aria-hidden="true"></i>
                     <input type="text" placeholder="Quick Search anything" class="search-field">
@@ -42,13 +44,13 @@
             <div class="component-card">
                 <h2 class="component-sample-heading" id="heading-card">CARDS</h2>
                 <div class="components">
-                    <div class="component-card1">
+                    <div class="component-card-1">
                         <i class="fa fa-heart fa-lg" aria-hidden="true"></i>
-                        <img src="./images/58146-pw-adidas-tr-mens-nmd-race-sneakers.png" alt="">
+                        <img src="./images/58146-pw-adidas-tr-mens-nmd-race-sneakers.png" alt="sneakers image">
                         <h3>Adidas Shoes</h3>
                         <h5>$110.00</h5>
-                        <div class="component-card1-rating">
-                            <div class="component-card1-stars">
+                        <div class="component-card-1-rating">
+                            <div class="component-card-1-stars">
                                 <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star"
                                     aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star"
                                     aria-hidden="true"></i>
@@ -57,49 +59,49 @@
                         </div>
                         <div class="product-bg"></div>
                     </div>
-                    <div class="component-card2">
-                        <img src="https://assets.myntassets.com/f_webp,dpr_1.5,q_60,w_210,c_limit,fl_progressive/assets/images/2312468/2018/2/21/11519195992929-Roadster-Women-Maroon-Solid-Round-Neck-T-shirt-7951519195992737-1.jpg" alt="">
-                        <div class="component-card2-desc">
-                            <div class="component-card2-top">
+                    <div class="component-card-2">
+                        <img src="https://assets.myntassets.com/f_webp,dpr_1.5,q_60,w_210,c_limit,fl_progressive/assets/images/2312468/2018/2/21/11519195992929-Roadster-Women-Maroon-Solid-Round-Neck-T-shirt-7951519195992737-1.jpg" alt="t-shirt image">
+                        <div class="component-card-2-desc">
+                            <div class="component-card-2-top">
                                 <p>40% OFF</p>
                                 <i class="fa fa-heart fa-lg" aria-hidden="true"></i>
                             </div>
-                            <div class="component-card2-bottom">
+                            <div class="component-card-2-bottom">
                                 <h3>Solid round t-shirt</h3>
                                 <h5>Roadster</h5>
                                 <small>Rs. 299 <span><s>499</s></span></small>
                             </div>
                         </div>
                     </div>
-                    <div class="component-card3">
-                        <img src="./images/2-wine-bottle-png-image.png" alt="">
-                        <div class="component-card3-top">
+                    <div class="component-card-3">
+                        <img src="./images/2-wine-bottle-png-image.png" alt="bottle image">
+                        <div class="component-card-3-top">
                             <h5>New</h5>
                             <h3>Sparkling Water</h3>
                             <p>Find Out Why sparkling water suits you. Avaliable near you.</p>
                         </div>
-                        <div class="component-card3-bottom">
+                        <div class="component-card-3-bottom">
                             <button>$1000</button>
                         </div>
                     </div>
-                    <div class="component-card4">
-                        <button class="component-card4-cancel">X</button>
-                        <img src="https://assets.myntassets.com/f_webp,dpr_1.5,q_60,w_210,c_limit,fl_progressive/assets/images/productimage/2021/2/19/5b8149ef-5930-4321-a4b4-7fbfa34c7d2d1613737373143-1.jpg" alt="">
+                    <div class="component-card-4">
+                        <button class="component-card-4-cancel">X</button>
+                        <img src="https://assets.myntassets.com/f_webp,dpr_1.5,q_60,w_210,c_limit,fl_progressive/assets/images/productimage/2021/2/19/5b8149ef-5930-4321-a4b4-7fbfa34c7d2d1613737373143-1.jpg" alt="slippers image">
                         <h3>Bonkerz</h3>
-                        <button class="component-card4-wishlist"><i class="fa fa-heart-o fa-lg" aria-hidden="true"></i>  WISHLIST</button>
+                        <button class="component-card-4-wishlist"><i class="fa fa-heart-o fa-lg" aria-hidden="true"></i>  WISHLIST</button>
                         <h5>Rs. 499</h5>
                         <p>Only Few Left!!</p>
                     </div>
-                    <div class="component-card5">
-                        <div class="component-card5-text">
+                    <div class="component-card-5">
+                        <div class="component-card-5-text">
                             <h3>Free yourself</h3>
                             <h2>from the digital clutter</h2>
                             <p>Just say what app you want. And see the app form around your words.</p>
                         </div>
                         <button>swipe</button>
                     </div>
-                    <div class="component-card6">
-                        <img src="images/food.png" alt="">
+                    <div class="component-card-6">
+                        <img src="images/food.png" alt="food image">
                         <h2>Happy food cooking</h2>
                         <p>Want to learn cook but confused how to start? No need to worry again!</p>
                         <button>Start</button>
@@ -110,18 +112,18 @@
                 <h2 class="component-sample-heading" id="heading-avatar">AVATARS</h2>
                 <div class="components">
                    <div class="component-avatar1">
-                       <img src="/images/batman_hero_avatar_comics-512.webp" alt="">
+                       <img src="/images/batman_hero_avatar_comics-512.webp" alt="avatar image">
                        <div class="component-avatar1-status">
                        </div>
                    </div>
                    <div class="component-avatar2">
-                        <img src="/images/batman_hero_avatar_comics-512.webp" alt="">
+                        <img src="/images/batman_hero_avatar_comics-512.webp" alt="avatar image">
                         <div class="component-avatar2-status">
                         </div>
                    </div>
                    <div class="component-avatar3">
                        <div class="component-avatar3-status">
-                            <img src="/images/batman_hero_avatar_comics-512.webp" alt="">
+                            <img src="/images/batman_hero_avatar_comics-512.webp" alt="avatar image">
                         </div>
                    </div>
                 </div>
@@ -165,7 +167,7 @@
                        <ol>
                            <li>
                                <div class="list-item">
-                                   <img src="https://images.unsplash.com/photo-1560365163-3e8d64e762ef?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NHx8aGFwcHklMjBmYWNlfGVufDB8fDB8&ixlib=rb-1.2.1&w=1000&q=80" alt="">
+                                   <img src="https://images.unsplash.com/photo-1560365163-3e8d64e762ef?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NHx8aGFwcHklMjBmYWNlfGVufDB8fDB8&ixlib=rb-1.2.1&w=1000&q=80" alt="sample user image">
                                    <p class="list-item-desc">
                                        lorem ipsum tagged you in a post
                                    </p>
@@ -173,7 +175,7 @@
                            </li>
                            <li>
                                <div class="list-item">
-                                   <img src="https://images.unsplash.com/photo-1560365163-3e8d64e762ef?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NHx8aGFwcHklMjBmYWNlfGVufDB8fDB8&ixlib=rb-1.2.1&w=1000&q=80" alt="">
+                                   <img src="https://images.unsplash.com/photo-1560365163-3e8d64e762ef?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NHx8aGFwcHklMjBmYWNlfGVufDB8fDB8&ixlib=rb-1.2.1&w=1000&q=80" alt="sample user image">
                                    <p class="list-item-desc">
                                        you and lorem are friends!
                                    </p>
@@ -182,7 +184,7 @@
                             <li>
                                 <div class="list-item">
                                     <img src="https://images.unsplash.com/photo-1560365163-3e8d64e762ef?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NHx8aGFwcHklMjBmYWNlfGVufDB8fDB8&ixlib=rb-1.2.1&w=1000&q=80"
-                                    alt="">
+                                    alt="sample user image">
                                     <p class="list-item-desc">
                                         lorem ipsum liked your photo
                                     </p>
@@ -190,7 +192,7 @@
                             </li>
                             <li>
                                 <div class="list-item">
-                                    <img src="https://images.unsplash.com/photo-1560365163-3e8d64e762ef?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NHx8aGFwcHklMjBmYWNlfGVufDB8fDB8&ixlib=rb-1.2.1&w=1000&q=80" alt="">
+                                    <img src="https://images.unsplash.com/photo-1560365163-3e8d64e762ef?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NHx8aGFwcHklMjBmYWNlfGVufDB8fDB8&ixlib=rb-1.2.1&w=1000&q=80" alt="sample user image">
                                     <p class="list-item-desc">
                                         lorem ipsum tagged you in a post
                                     </p>
@@ -220,16 +222,16 @@
                 <h2 class="component-sample-heading" id="heading-button">BUTTONS</h2>
                 <div class="components">
                    <div class="component-btn">
-                        <button class="primary">Primary Button</button>
+                        <button class="btn primary">Primary Button</button>
                    </div>
                    <div class="component-btn">
-                        <button class="secondary">Secondary Button</button>
+                        <button class="btn secondary">Secondary Button</button>
                    </div>
                    <div class="component-btn">
-                        <a class="primary-link" href="">Primary Link</a>
+                        <a class="link primary-link" href="">Primary Link</a>
                    </div>
                    <div class="component-btn">
-                        <a class="secondary-link" href="">Secondary Link</a>
+                        <a class="link secondary-link" href="">Secondary Link</a>
                    </div>
                    <div class="component-btn">
                         <div class="slider slider-inactive">
@@ -246,7 +248,7 @@
                 <div class="components-grid1">
                     <div class="component-nav1">
                         <nav>
-                            <img src="/images/v-8-2000x2044-removebg-preview.png" alt="">
+                            <img src="/images/v-8-2000x2044-removebg-preview.png" alt="company logo">
                             <div class="nav1-list">
                                 <ol>
                                     <li>Home</li>
@@ -268,7 +270,7 @@
                     </div>
                     <div class="component-nav2">
                         <nav>
-                            <img src="/images/dribbble-4.svg" alt="">
+                            <img src="/images/dribbble-4.svg" alt="sample logo image">
                             <div class="nav2-list">
                                 <ol>
                                     <li>Inspiration</li>
@@ -302,7 +304,7 @@
                    </div>
                     <div class="component-alert3">
                         <div class="alert-success-animate">
-                            <img src="https://www.freeiconspng.com/thumbs/success-icon/success-icon-10.png" alt="">
+                            <img src="https://www.freeiconspng.com/thumbs/success-icon/success-icon-10.png" alt="success image">
                             <div class="alert-success-animate-text">
                                 <h3>Success!</h3>
                                 <p>The process was successfull</p>
@@ -312,7 +314,7 @@
                     </div>
                     <div class="component-alert4">
                         <div class="alert-failure-animate">
-                            <img src="/images/kisspng-exclamation-mark-clip-art-vector-graphics-computer-5ced299834b624.4021236515590465522159-removebg-preview.png" alt="">
+                            <img src="/images/kisspng-exclamation-mark-clip-art-vector-graphics-computer-5ced299834b624.4021236515590465522159-removebg-preview.png" alt="alert image">
                             <div class="alert-failure-animate-text">
                                 <h3>Oops!</h3>
                                 <p>Error occured</p>
@@ -322,7 +324,7 @@
                     </div>
                     <div class="component-alert5">
                         <div class="toast-success">
-                            <img src="https://freepngimg.com/thumb/success/6-2-success-png-image.png" alt="">
+                            <img src="https://freepngimg.com/thumb/success/6-2-success-png-image.png" alt="success image">
                             <div class="toast-success-text">
                                 <h6>Your complaint has been registered</h6>
                                 <p>We will notify you soon as it is processed by a moderator</p>
@@ -331,7 +333,7 @@
                     </div>
                     <div class="component-alert6">
                         <div class="toast-failure">
-                            <img src="images/kisspng-exclamation-mark-clip-art-vector-graphics-computer-5ced299834b624.4021236515590465522159-removebg-preview.png" alt="">
+                            <img src="images/kisspng-exclamation-mark-clip-art-vector-graphics-computer-5ced299834b624.4021236515590465522159-removebg-preview.png" alt="alert image">
                             <div class="toast-failure-text">
                                 <h6>Your complaint can't be received</h6>
                                 <p>Retry later or contact a moderator</p>
