--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 <body>
     <div class="nav">
         <nav>
+            <a href="./index.html" class="logo-nav">
             <div class="logo">
                 <div class="leaf leaf3"></div>
                 <div class="leaf leaf2"></div>
                 <div class="leaf leaf1"></div>
                 <span class="name">Lemoncss</span>
             </div>
+            </a>
             <div class="search">
                 <i class="fa fa-search fa-lg" aria-hidden="true"></i>
                 <input type="text" placeholder="Quick Search anything" class="search-field">
